# csldr

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build-release.yml  cmake.yml
csldr/: camera.c  camera.h  cdll_int.c  cl_dll.h  d3d.c  d3d.h  export.c  fov.c  fov.h  gamma.c  gamma.h  gl_load.c  gl_load.h  hash.h  hud_crosshair.c  hud_crosshair.h  inspect.c  inspect.h  keyvalue.c  keyvalue.h  maths.c  maths.h  memory.c  memory.h  msg.c  msg.h  passthrough.c  passthrough.h  pch.h  platform.h  platform_linux.c  platform_unix.c  platform_win.c  player_info.c  player_info.h  proxy.c  proxy.h  render.c  render.h  sdk_include.h  (+24 more)
sdk/: cdll_int.h  cl_entity.h  com_model.h  cs_weapon.h  cvar.h  entity_state.h  event_api.h  mathlib.c  mathlib.h  parsemsg.c  parsemsg.h  pm_movevars.h  r_efx.h  r_studioint.h  ref_params.h  studio.h  weaponinfo.h
shaders/: shader_prep.sh  studio.frag  studio.glsl  studio.vert  studio_cpu.vert  studio_cpu_vert.h  studio_frag.h  studio_glsl.h  studio_gpu.vert  studio_gpu_vert.h  studio_vert.h
